--- a/.gitignore
+++ b/.gitignore
@@ -8,29 +8,14 @@ first_sem/
 
 дискра_дз1/
 
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
 bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+obj/
 
-### VS Code ###
+*.sln
+
+*.csproj
+
 .vscode/
+
+Дискретная_математика/
